src/test/kalang-snippets/error/DefaultParamCheck.kls
missing default value for parameter lastParam@1
int methodWithDefParam(int value = 5, String lastParam) {
    return value + 1;
}